--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     def lifecycleVersion = '2.2.0'
     def androidxVersion = '1.0.0'
     def glideVersion = '4.8.0'
+    def playVersion = '17.0.0'
 
     // retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -52,4 +53,7 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+
+    // Location services
+    implementation "com.google.android.gms:play-services-location:$playVersion"
 }
