--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     def androidxVersion = '1.0.0'
     def glideVersion = '4.8.0'
     def playVersion = '17.0.0'
+    def lottieVersion = '3.4.0'
 
     // retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -56,4 +57,7 @@ dependencies {
 
     // Location services
     implementation "com.google.android.gms:play-services-location:$playVersion"
+
+    // lottie animations
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
